--- a/main.css
+++ b/main.css
@@ -574,6 +574,7 @@ body.dark .search-field i{
        nav .nav-bar .sidebarOpen{
 		display: block;
         margin-left: 109px;
+	       background-color:blue;
     }
 
 
